--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - .:/usr/src/app
     ports:
       - 3000:3000
+    restart: always
     stdin_open: true
     tty: true
     environment:
