--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,9 @@ services:
     build: 
       context: .
     volumes:
-      - .:/usr/src/app
+      - .:/app
+      - /app/node_modules
     ports:
       - 3000:3000
-    restart: always
     stdin_open: true
     tty: true
-    environment:
-      - CHOKIDAR_USEPOLLING=true
